<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iconPersonList"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="@dimen/iconDefault"
        android:layout_height="@dimen/iconDefault"
        android:layout_margin="@dimen/marginDefault"
        android:src="@drawable/list_icon"/>

    <TextView
        android:id="@+id/tvImageLink"
        app:layout_constraintTop_toBottomOf="@id/iconPersonList"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/marginDefault"
        android:layout_height="wrap_content"
        android:text="@string/tvImageLink"
        android:textSize="17dp"/>
    <EditText
        android:id="@+id/etImageLink"
        app:layout_constraintTop_toBottomOf="@+id/tvImageLink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintImageLink"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/tvBirthDate"
        app:layout_constraintTop_toBottomOf="@id/etImageLink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvBirthDate"
        android:textSize="@dimen/textSizeDefault"/>
    <EditText
        android:id="@+id/etBirthDate"
        app:layout_constraintTop_toBottomOf="@+id/tvBirthDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintDate"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/tvDeathDate"
        app:layout_constraintTop_toBottomOf="@id/etBirthDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDeathDate"
        android:textSize="@dimen/textSizeDefault"/>
    <EditText
        android:id="@+id/etDeathDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDeathDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintDate"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/tvDesc"
        app:layout_constraintTop_toBottomOf="@id/etDeathDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDesc"
        android:textSize="@dimen/textSizeDefault"/>
    <EditText
        android:id="@+id/etDesc"
        app:layout_constraintTop_toBottomOf="@+id/tvDesc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/etSizeLarge"
        android:hint="@string/hintDesc"
        android:textAlignment="center"
        android:gravity="bottom"/>
    <TextView
        android:id="@+id/tvQuote"
        app:layout_constraintTop_toBottomOf="@id/etDesc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvQuote"
        android:textSize="@dimen/textSizeDefault"/>
    <EditText
        android:id="@+id/etQuote"
        app:layout_constraintTop_toBottomOf="@+id/tvQuote"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintQuote"
        android:textAlignment="center" />
    <Button
        android:id="@+id/btnAddPerson"
        app:layout_constraintTop_toBottomOf="@id/etQuote"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginDefault"
        android:text="@string/btnAddPerson"/>


</androidx.constraintlayout.widget.ConstraintLayout>