<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/personImage"
        android:layout_height="@dimen/imageHeight"
        android:layout_width="@dimen/imageWidth"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/marginDefault"
        android:src="@drawable/person_icon"
        />
    <TextView
        android:id="@+id/tvBirth"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/personImage"
        android:layout_margin="@dimen/marginDefault"
        android:text="@string/born"
        />
    <TextView
        android:id="@+id/birth"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvBirth"
        android:layout_margin="@dimen/marginDefault"
        android:text="@string/born"
        />
    <TextView
        android:id="@+id/tvDied"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/birth"
        android:layout_margin="@dimen/marginDefault"
        android:text="@string/died"
        />
    <TextView
        android:id="@+id/died"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvDied"
        android:layout_margin="@dimen/marginDefault"
        android:text="@string/died"
        />

    <TextView
        android:id="@+id/desc"
        android:layout_height="@dimen/descHeight"
        android:layout_width="@dimen/descWidth"
        app:layout_constraintTop_toBottomOf="@id/tvBirth"
        app:layout_constraintLeft_toRightOf="@id/personImage"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/marginDefault"
        android:text="@string/desc"
        />
</androidx.constraintlayout.widget.ConstraintLayout>